--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,6 +36,9 @@
       <a clrVerticalNavLink routerLink="/cart" routerLinkActive="active">
         Cart
       </a>
+      <a clrVerticalNavLink routerLink="/varwrite" routerLinkActive="active">
+        Post a Var Comment
+      </a>
       <a clrVerticalNavLink routerLink="/write" routerLinkActive="active">
         Post a Comment
       </a>
