Adds unit tests

--- a/src/app/var-write/var-write.component.html
+++ b/src/app/var-write/var-write.component.html
@@ -12,7 +12,7 @@
 
                     <quill-editor style="width: 800px; height: 200px;"
                         [formControl]="control"
-                        [formControlName]="'containerControlName'"
+                        [formControlName]="controlName"
                         [placeholder]="''"
                         [modules]="quillConfiguration"
                         class="content-editor"
